# cppbuild_cmake

./: LICENSE  README.md
Modules/: global_config.cmake
Modules/_windows/: 说明.txt
Modules/_windows/3rd/: FindLibSSH2.cmake  FindRapidJSON.cmake  FindZstd.cmake
Modules/_windows/3rd/curl/CMake/: FindLibSSH2.cmake  FindZstd.cmake
Modules/_windows/3rd/folly/: FindZstd.cmake
Modules/_windows/3rd/folly/CMake/: FindDoubleConversion.cmake  FindZstd.cmake
Modules/_windows/system/: FindCURL.cmake  FindZLIB.cmake
demo/: OpenCV_CPU---.md  README.md  TODO.txt  folly---.md  libuv--.md  zstd---.md
demo/demo-boost/: CMakeLists.txt
demo/demo-curl/: CMakeLists.txt  main.cpp
demo/demo-openssl/: CMakeLists.txt  main.cpp
demo/demo-rapidjson/: CMakeLists.txt  build.bat  json_utils_wrap.cpp  json_utils_wrap.h  main.cpp
demo/demo-zlib/: CMakeLists.txt  build.bat  main.cpp
